<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/txt_warningTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_bottomSheet_image_title"
        android:textSize="17sp"
        android:textColor="@color/color_default" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:background="?actionBarDivider"
        android:contentDescription="@string/divider_setContentDescription" />
    <TextView
        android:id="@+id/txt_warningMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/text_bottomSheet_image_message"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn"
        android:letterSpacing=".2"
        android:textAllCaps="true"
        app:backgroundTint="@null"
        android:text="@string/text_bottomSheet_image_btn_cam"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_galery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn"
        android:letterSpacing=".2"
        android:textAllCaps="true"
        app:backgroundTint="@null"
        android:text="@string/text_bottomSheet_image_btn_galery"/>

</LinearLayout>