<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.auth.register.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/text_title_register_fragment" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name_register_fragment"
            android:layout_margin="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/register_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_name_register_fragment"
            style="@style/Theme.EditText"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/color_default"
            android:drawablePadding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email_register_fragment"
            android:layout_margin="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_user_name" />

        <EditText
            android:id="@+id/register_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_email_register_fragment"
            android:inputType="textEmailAddress"
            style="@style/Theme.EditText"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="@color/color_default"
            android:drawablePadding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints="emailAddress" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_register_fragment"
            android:layout_margin="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_user_email" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/register_user_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mask="(##) #####-####"
            android:hint="@string/text_hint_phone_register_fragment"
            android:inputType="phone"
            style="@style/Theme.EditText"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_smartphone"
            android:drawableTint="@color/color_default"
            android:drawablePadding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints="phone" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password_register_fragment"
            android:layout_margin="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_user_telefone" />

        <EditText
            android:id="@+id/register_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="@color/color_default"
            android:drawablePadding="12dp"
            android:hint="@string/text_hint_password_register_fragment"
            android:inputType="textPassword"
            style="@style/Theme.EditText"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="-16dp"
            android:autofillHints="password" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_btn"
            android:letterSpacing=".1"
            android:text="@string/text_button_register_fragment"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@+id/register_user_password"
            tools:layout_editor_absoluteX="30dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:visibility="invisible"
            android:indeterminateTint="@color/color_default"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>