<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".presenter.profile.ProfileFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_profileFragment_toolbar" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <io.woong.shapedimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginVertical="20dp"
            app:border_color="@color/white"
            android:layout_gravity="center_horizontal"
            app:border_enabled="true"
            app:border_size="2dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeTransfer"
            app:shape_formula="com.example.app.CustomFormula"
            tools:src="@drawable/image_user" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name_register_fragment"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/profile_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_name_register_fragment"
            style="@style/Theme.EditText"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="@color/color_default"
            android:drawablePadding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints="name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email_register_fragment"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_user_name" />

        <EditText
            android:id="@+id/profile_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="@string/text_hint_email_register_fragment"
            android:enabled="false"
            android:inputType="textEmailAddress"
            style="@style/Theme.EditText"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="@color/color_default"
            android:textColor="@color/color_text_hint"
            android:drawablePadding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints="emailAddress" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_register_fragment"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/color_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_user_email" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/profile_user_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mask="(##) #####-####"
            android:hint="@string/text_hint_phone_register_fragment"
            android:inputType="phone"
            style="@style/Theme.EditText"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_smartphone"
            android:drawableTint="@color/color_default"
            android:drawablePadding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="0dp"
            android:autofillHints="phone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_btn"
            android:letterSpacing=".1"
            android:text="@string/text_profileFragment_btn"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@+id/register_user_password"
            tools:layout_editor_absoluteX="30dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:visibility="invisible"
            android:indeterminateTint="@color/color_default"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />




    </LinearLayout>


</ScrollView>